--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,16 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
+    # Extract secret, android firebase cfg file
+    - name: Extract google-services.json
+      run: 'echo "$GOOGLE_SERVICES_JSON" > app/App_Resources/Android'
+      shell: bash
+      env:
+        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+
     # debug action - you ca connect with ssh
-    # - name: Setup tmate session
-    #   uses: mxschmitt/action-tmate@v2
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v2
 
     # setup nativescript
     - name: Setup nativescirpt
