--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
     # Extract secret, android firebase cfg file
     - name: Extract google-services.json
-      run: 'echo "$GOOGLE_SERVICES_JSON" > app/App_Resources/Android'
+      run: 'echo "$GOOGLE_SERVICES_JSON" > app/App_Resources/Android/google-services.json'
       shell: bash
       env:
         GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
