--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,6 @@ jobs:
       env:
         GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
-    # debug action - you ca connect with ssh
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v2
-
     # setup nativJescript
     - name: Setup nativescirpt
       uses: andreav/setup-nativescript-action@master
@@ -33,3 +29,7 @@ jobs:
 
     - name: Build Android Package
       run: tns build android
+
+    # debug action - you ca connect with ssh
+    # - name: Setup tmate session
+    #   uses: mxschmitt/action-tmate@v2
