--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,11 +42,11 @@ jobs:
     - uses: actions/checkout@v2
 
     # Extract secret, android firebase cfg file
-    - name: Extract google-services.json
-      run: 'echo "$GOOGLE_SERVICES_JSON" > app/App_Resources/Android/google-services.json'
+    - name: Extract GoogleService-Info.plist
+      run: 'echo "$GOOGLE_SERVICES_INFO_PLIST" > app/App_Resources/iOS/GoogleService-Info.plist'
       shell: bash
       env:
-        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        GOOGLE_SERVICES_INFO_PLIST: ${{ secrets.GOOGLE_SERVICES_INFO_PLIST }}
 
     # debug action - you ca connect with ssh
     - name: Setup tmate session
