--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ hooks
 platforms
 app/App_Resources/Android/google-services.json
 app/App_Resources/iOS/GoogleService-Info.plist
+mochawesome-report/
