--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "andreav",
   "license": "MIT",
   "scripts": {
-    "emu": "cross-env-shell '$ANDROID_HOME/emulator/emulator -avd generic_10'"
+    "emu": "cross-env-shell '$ANDROID_HOME/emulator/emulator -avd generic_10'",
+    "e2e": "node ./node_modules/nativescript-dev-appium/check-dev-deps.js &&  mocha --opts ./e2e/config/mocha.opts "
   },
   "nativescript": {
     "id": "org.andreav.nstest",
@@ -30,9 +31,17 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@types/chai": "~4.1.7",
+    "@types/mocha": "~5.2.5",
     "@types/node": "^13.11.1",
     "babel-loader": "^8.1.0",
+    "chai": "~4.1.2",
     "cross-env": "^7.0.2",
+    "mocha": "~5.2.0",
+    "mocha-junit-reporter": "~1.18.0",
+    "mocha-multi": "~1.0.1",
+    "mochawesome": "~3.1.2",
+    "nativescript-dev-appium": "^6.1.3",
     "nativescript-dev-webpack": "^1.5.1",
     "nativescript-vue-template-compiler": "^2.6.0",
     "nativescript-worker-loader": "~0.11.0",
